# scoda

./: README.md
benchmark_code/: CMakeLists.txt  README  README.md
benchmark_code/include/: community.h  types.h  utils.h
benchmark_code/source/: community.cpp  utils.cpp
benchmark_code/source/scoda/: main.cpp
minimal_code/: Makefile  README.md  scoda.c
